--- a/package.json
+++ b/package.json
@@ -10,18 +10,18 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.4",
-    "@resvg/resvg-js": "^2.6.2",
     "@supabase/supabase-js": "^2.90.1",
     "canvas-confetti": "^1.9.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.27.0",
+    "geist": "^1.5.1",
+    "html-to-image": "^1.11.13",
     "lucide-react": "^0.562.0",
     "next": "16.1.3",
     "next-themes": "^0.4.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "satori": "^0.19.1",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
