--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "lucide-react": "^0.562.0",
     "next": "16.1.3",
     "next-themes": "^0.4.6",
+    "plotly.js": "^3.3.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-plotly.js": "^2.6.0",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
